--- a/sources/VeloCity.Wpf.Presentation/Pages/StartSprintConfirmation/StartSprintConfirmationWindow.xaml
+++ b/sources/VeloCity.Wpf.Presentation/Pages/StartSprintConfirmation/StartSprintConfirmationWindow.xaml
@@ -72,7 +72,9 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
                 <styles:StartIcon
                     DockPanel.Dock="Left"
-                    Margin="0 0 20 0"/>
+                    Margin="0 0 20 0"
+                    Width="32"
+                    Height="32" />
 
                 <TextBlock
                     Text="{Binding Title}"
@@ -94,14 +96,14 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                     Content="Cancel"
                     IsCancel="True"
                     MinWidth="100"
-                    TabIndex="4"/>
+                    TabIndex="4" />
 
                 <Button
                     Content="Ok"
                     IsDefault="True"
                     MinWidth="100"
                     Click="ButtonBase_OnClick"
-                    TabIndex="3"/>
+                    TabIndex="3" />
 
             </StackPanel>
         </Border>
@@ -124,21 +126,21 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                 Grid.Column="0"
                 Content="_Commitment Story Points"
                 VerticalAlignment="Center"
-                Target="TextBoxCommitmentStoryPoints"/>
+                Target="TextBoxCommitmentStoryPoints" />
 
             <TextBox
                 Grid.Row="0"
                 Grid.Column="2"
                 x:Name="TextBoxCommitmentStoryPoints"
                 Text="{Binding CommitmentStoryPoints, Converter={StaticResource StoryPointsToNumberConverter}}"
-                TabIndex="1"/>
+                TabIndex="1" />
 
             <Label
                 Grid.Row="1"
                 Grid.Column="0"
                 Content="Sprint's _Goal"
                 VerticalAlignment="Center"
-                Target="TextBoxSprintGoal"/>
+                Target="TextBoxSprintGoal" />
 
             <TextBox
                 Grid.Row="1"
