--- a/sources/VeloCity.Wpf.Presentation.Styles/Themes/CustomControls/StartIconStyles.xaml
+++ b/sources/VeloCity.Wpf.Presentation.Styles/Themes/CustomControls/StartIconStyles.xaml
@@ -26,10 +26,10 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     </ResourceDictionary.MergedDictionaries>
 
     <Style TargetType="{x:Type styles:StartIcon}">
-        <Setter Property="Foreground" Value="MediumSeaGreen" />
+        <Setter Property="Foreground" Value="{StaticResource SuccessBrush}" />
         <Setter Property="Background" Value="Transparent" />
-        <Setter Property="Width" Value="32" />
-        <Setter Property="Height" Value="32" />
+        <Setter Property="Width" Value="64" />
+        <Setter Property="Height" Value="64" />
         <Setter Property="IsTabStop" Value="False" />
 
         <Setter Property="Template">
