--- a/sources/VeloCity.Wpf.Presentation.Styles/Themes/CustomControls/MissingContentPanelStyles.xaml
+++ b/sources/VeloCity.Wpf.Presentation.Styles/Themes/CustomControls/MissingContentPanelStyles.xaml
@@ -16,51 +16,46 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 <ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:converters="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.Styles.Converters" 
+    xmlns:converters="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.Styles.Converters"
     xmlns:customControls="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.CustomControls;assembly=DustInTheWind.VeloCity.Wpf.Presentation.CustomControls">
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="Pack://application:,,,/DustInTheWind.VeloCity.Wpf.Presentation.Styles;component/Themes/Constants.xaml" />
+        <ResourceDictionary Source="Pack://application:,,,/DustInTheWind.VeloCity.Wpf.Presentation.Styles;component/Themes/StandardControls/StandardControlStyles.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
-    <converters:NullToVisibilityConverter x:Key="NullToVisibilityConverter" />
+    <converters:BooleanToVisibilityInverseConverter x:Key="BooleanToVisibilityInverseConverter" />
+    <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
 
-    <Style
-        x:Key="{x:Type customControls:LabeledContent}"
-        TargetType="{x:Type customControls:LabeledContent}">
+    <Style TargetType="{x:Type customControls:MissingContentPanel}">
 
         <Setter Property="IsTabStop" Value="False" />
 
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="{x:Type customControls:LabeledContent}">
+                <ControlTemplate TargetType="{x:Type customControls:MissingContentPanel}">
 
-                    <Grid
-                        Margin="0 0 0 8"
-                        Visibility="{TemplateBinding Visibility}">
-
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="Auto" SharedSizeGroup="LabelColumn" />
-                            <ColumnDefinition Width="20" />
-                            <ColumnDefinition Width="*" SharedSizeGroup="ValueColumn" />
-                        </Grid.ColumnDefinitions>
-
-                        <Label
-                            Grid.Column="0"
-                            FontSize="{StaticResource DefaultFontSize}"
-                            Content="{TemplateBinding Label}" />
+                    <Grid>
 
                         <ContentPresenter
-                            Grid.Column="2"
-                            Content="{TemplateBinding Content}">
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Center"
+                            Content="{TemplateBinding MissingContent}"
+                            IsEnabled="False"
+                            Visibility="{TemplateBinding IsContentVisible, Converter={StaticResource BooleanToVisibilityInverseConverter}}" >
 
                             <ContentPresenter.Resources>
                                 <Style TargetType="{x:Type TextBlock}" BasedOn="{StaticResource {x:Type TextBlock}}">
-                                    <Setter Property="TextWrapping" Value="Wrap" />
                                     <Setter Property="FontSize" Value="20" />
                                 </Style>
                             </ContentPresenter.Resources>
+
                         </ContentPresenter>
+
+                        <ContentPresenter
+                            Content="{TemplateBinding Content}"
+                            Visibility="{TemplateBinding IsContentVisible, Converter={StaticResource BooleanToVisibilityConverter}}" />
+
                     </Grid>
 
                 </ControlTemplate>
