--- a/sources/VeloCity.Wpf.Presentation.Styles/Themes/CustomControls/NotesBlockStyles.xaml
+++ b/sources/VeloCity.Wpf.Presentation.Styles/Themes/CustomControls/NotesBlockStyles.xaml
@@ -19,7 +19,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 <ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:styles="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.Styles">
+    xmlns:customControls="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.CustomControls;assembly=DustInTheWind.VeloCity.Wpf.Presentation.CustomControls">
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="Pack://application:,,,/DustInTheWind.VeloCity.Wpf.Presentation.Styles;component/Themes/Constants.xaml" />
@@ -38,7 +38,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <Setter Property="Control.Margin" Value="0 10 0 0" />
     </Style>
 
-    <Style TargetType="{x:Type styles:NotesBlock}">
+    <Style TargetType="{x:Type customControls:NotesBlock}">
         <Setter Property="FontFamily" Value="{StaticResource DefaultFontFamily}" />
         <Setter Property="FontSize" Value="{StaticResource DefaultFontSize}" />
         <Setter Property="Foreground" Value="{StaticResource FontPrimaryBrush}" />
@@ -51,7 +51,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
         <Setter Property="ItemContainerStyleSelector">
             <Setter.Value>
-                <styles:ListItemStyleSelector
+                <customControls:ListItemStyleSelector
                     FirstItemStyle="{StaticResource NotesBlockFirstItemStyle}"
                     NormalItemStyle="{StaticResource NotesBlockNormalItemStyle}"
                     LastItemStyle="{StaticResource NotesBlockLastItemStyle}" />
@@ -60,9 +60,9 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="{x:Type styles:NotesBlock}">
+                <ControlTemplate TargetType="{x:Type customControls:NotesBlock}">
 
-                    <styles:InfoBlock
+                    <customControls:InfoBlock
                         Background="{TemplateBinding Background}"
                         Foreground="{TemplateBinding Foreground}"
                         Padding="{TemplateBinding Padding}"
@@ -72,7 +72,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
                         <ItemsPresenter />
 
-                    </styles:InfoBlock>
+                    </customControls:InfoBlock>
 
                     <ControlTemplate.Triggers>
                         <DataTrigger Binding="{Binding Items.Count, RelativeSource={RelativeSource Self}}" Value="0">
