--- a/sources/VeloCity.Wpf.Presentation.Styles/Themes/CustomControls/PanelWithTitleStyles.xaml
+++ b/sources/VeloCity.Wpf.Presentation.Styles/Themes/CustomControls/PanelWithTitleStyles.xaml
@@ -16,8 +16,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 <ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:styles="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.Styles"
-    xmlns:converters="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.Styles.Converters">
+    xmlns:converters="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.Styles.Converters"
+    xmlns:customControls="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.CustomControls;assembly=DustInTheWind.VeloCity.Wpf.Presentation.CustomControls">
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="Pack://application:,,,/DustInTheWind.VeloCity.Wpf.Presentation.Styles;component/Themes/Constants.xaml" />
@@ -25,12 +25,12 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
     <converters:NullToVisibilityConverter x:Key="NullToVisibilityConverter" />
 
-    <Style x:Key="{x:Type styles:PanelWithTitle}" TargetType="{x:Type styles:PanelWithTitle}">
+    <Style x:Key="{x:Type customControls:PanelWithTitle}" TargetType="{x:Type customControls:PanelWithTitle}">
         <Setter Property="IsTabStop" Value="False" />
 
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="{x:Type styles:PanelWithTitle}">
+                <ControlTemplate TargetType="{x:Type customControls:PanelWithTitle}">
 
                     <DockPanel>
 
