--- a/sources/VeloCity.Wpf.Presentation.Styles/Themes/StandardControls/ListViewStyles.xaml
+++ b/sources/VeloCity.Wpf.Presentation.Styles/Themes/StandardControls/ListViewStyles.xaml
@@ -42,7 +42,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                 <ControlTemplate TargetType="{x:Type ListView}">
                     <Border
                         Name="PART_Border"
-                        BorderThickness="1"
+                        BorderThickness="{TemplateBinding BorderThickness}"
                         BorderBrush="{TemplateBinding BorderBrush}"
                         Background="{TemplateBinding Background}">
 
