--- a/sources/VeloCity.Wpf.Presentation/Pages/CloseSprintConfirmation/CloseSprintConfirmationWindow.xaml
+++ b/sources/VeloCity.Wpf.Presentation/Pages/CloseSprintConfirmation/CloseSprintConfirmationWindow.xaml
@@ -25,11 +25,11 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:converters="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.Converters"
     xmlns:closeSprintConfirmation="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.Pages.CloseSprintConfirmation"
-    xmlns:styles="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.Styles;assembly=DustInTheWind.VeloCity.Wpf.Presentation.Styles"
+    xmlns:customControls="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.CustomControls;assembly=DustInTheWind.VeloCity.Wpf.Presentation.CustomControls"
 
     mc:Ignorable="d"
     Title="Close Sprint"
-    Height="400"
+    Height="480"
     Width="640"
     WindowStartupLocation="CenterOwner"
     ShowInTaskbar="False"
@@ -57,10 +57,12 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
         <Border
             DockPanel.Dock="Top"
-            MinHeight="50"
+            MinHeight="70"
             Background="{StaticResource PrimaryDarkBrush}"
-            Padding="30 20"
-            MouseDown="UIElement_OnMouseDown">
+            Padding="30 0"
+            MouseDown="UIElement_OnMouseDown"
+            BorderThickness="0 0 0 1"
+            BorderBrush="{StaticResource PrimaryLightBrush}">
 
             <Border.Resources>
                 <Style TargetType="{x:Type TextBlock}" BasedOn="{StaticResource {x:Type TextBlock}}">
@@ -68,9 +70,9 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                 </Style>
             </Border.Resources>
 
-            <DockPanel>
+            <DockPanel VerticalAlignment="Center">
 
-                <styles:CloseIcon
+                <customControls:CloseIcon
                     DockPanel.Dock="Left"
                     Margin="0 0 20 0"
                     Width="32"
@@ -78,12 +80,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
                 <TextBlock
                     Text="{Binding Title}"
-                    VerticalAlignment="Center">
-                    <TextBlock Text="Close Sprint" />
-                    <TextBlock Text="{Binding SprintNumber}" />
-                    <TextBlock Text="-" />
-                    <TextBlock Text="{Binding SprintName}" />
-                </TextBlock>
+                    VerticalAlignment="Center"
+                    TextTrimming="CharacterEllipsis" />
 
             </DockPanel>
 
@@ -92,11 +90,15 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <Border
             DockPanel.Dock="Bottom"
             Background="{StaticResource PrimaryDarkBrush}"
-            Padding="30 10">
+            MinHeight="70"
+            Padding="30 0"
+            BorderThickness="0 1 0 0"
+            BorderBrush="{StaticResource PrimaryLightBrush}">
 
             <StackPanel
                 Orientation="Horizontal"
-                FlowDirection="RightToLeft">
+                FlowDirection="RightToLeft"
+                VerticalAlignment="Center">
 
                 <Button
                     Content="Cancel"
@@ -130,7 +132,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
             <Label
                 Grid.Row="0"
                 Grid.Column="0"
-                Content="_Actual Story Points"
+                Content="_Actual Story Points:"
                 VerticalAlignment="Center"
                 Target="TextBoxActualStoryPoints" />
 
@@ -144,7 +146,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
             <Label
                 Grid.Row="1"
                 Grid.Column="0"
-                Content="_Comments"
+                Content="_Comments:"
                 VerticalAlignment="Center"
                 Target="TextBoxComments" />
 
@@ -154,7 +156,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                 x:Name="TextBoxComments"
                 Text="{Binding Comments}"
                 Style="{StaticResource MultilineTextBoxStyle}"
-                Margin="0 10 0 0"
+                Margin="0 20 0 0"
                 TabIndex="2" />
         </Grid>
 
