--- a/sources/VeloCity.Wpf.Presentation/Pages/SprintsList/SprintsListView.xaml
+++ b/sources/VeloCity.Wpf.Presentation/Pages/SprintsList/SprintsListView.xaml
@@ -24,8 +24,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:sprintsList="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.Pages.SprintsList"
-    xmlns:styles="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.Styles;assembly=DustInTheWind.VeloCity.Wpf.Presentation.Styles"
     xmlns:controls="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.Controls"
+    xmlns:customControls="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.CustomControls;assembly=DustInTheWind.VeloCity.Wpf.Presentation.CustomControls"
 
     mc:Ignorable="d"
     d:DesignHeight="450"
@@ -56,7 +56,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                 Command="{Binding StartSprintCommand}"
                 ToolTip="Start the currently selected sprint.">
 
-                <styles:StartIcon
+                <customControls:StartIcon
                     Width="16"
                     Height="16" />
             </Button>
@@ -66,7 +66,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                 Command="{Binding CloseSprintCommand}"
                 ToolTip="Close the currently selected sprint.">
 
-                <styles:CloseIcon
+                <customControls:CloseIcon
                     Width="16"
                     Height="16" />
             </Button>
@@ -76,7 +76,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <ListView
             ItemsSource="{Binding Sprints}"
             SelectedItem="{Binding SelectedSprint}"
-            SelectionMode="Single">
+            SelectionMode="Single"
+            BorderThickness="0">
 
             <ListView.ItemContainerStyle>
                 <Style TargetType="ListViewItem">
